--- a/main.tex
+++ b/main.tex
@@ -3,9 +3,10 @@
 \input{book_command}
 %\includeonly{week1/Tuesday}
 \begin{document}
-
+%Hello
 \frontmatter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%Command
 %% Title Pages
 %% Wiley will provide title and copyright page, but you can make
 %% your own titlepages if you'd like anyway
