Update the logo

--- a/Wiley-AuthoringTemplate.sty
+++ b/Wiley-AuthoringTemplate.sty
@@ -1973,7 +1973,7 @@ No query.\par%
 \huge\bfseries\AuthandAffil\par}\par
 \vfill
 
-\noindent{{LOGO}}
+\noindent{{\includegraphics{zh-hans_logo.png}}}
 
 %\vskip-8pt
 %{A JOHN WILEY \& SONS, INC., PUBLICATION}
