Update the Week 1 Friday file

--- a/Wiley-AuthoringTemplate.sty
+++ b/Wiley-AuthoringTemplate.sty
@@ -1070,8 +1070,8 @@ to\@pnumwidth{\hss #2}\par
 
 
 
-\renewenvironment{proof}{\begingroup\parskip=0pt%%
-\indent\textit{Proof.\quad}\ignorespaces}{\endgroup}%
+%\renewenvironment{proof}{\begingroup\parskip=0pt%%
+%\indent\textit{Proof.\quad}\ignorespaces}{\endgroup}%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
