--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 
 %% Run LaTeX on this file several times to get Table of Contents,
 \input{book_command}
-%\includeonly{week1/Tuesday}
+\includeonly{week1/Friday}
 \begin{document}
 %Hello
 \frontmatter
