Update the book

--- a/Solution/Solution_to_assignment_two.tex
+++ b/Solution/Solution_to_assignment_two.tex
@@ -28,14 +28,22 @@ Hence $\bm C^{-1}\bm B^{-1}\bm A^{-1}$ is the right inverse of $\bm{ABC}$. Hence
 \end{proof}
 \item
 \begin{proof}[Solution.]
-The inverse are respectively given by $
+The inverse are respectively given by 
+\[
+\begin{array}{lll}
 \begin{bmatrix}
 \bm I&\bm 0\\-\bm C&\bm I
-\end{bmatrix}, \begin{bmatrix}
+\end{bmatrix},
+&
+\begin{bmatrix}
 \bm A^{-1}&\bm 0\\ -\bm D^{-1}\bm C\bm A^{-1}&\bm D^{-1}
-\end{bmatrix}, \begin{bmatrix}
+\end{bmatrix},
+&
+\begin{bmatrix}
 -\bm D&\bm I\\\bm I&\bm 0
-\end{bmatrix}.$
+\end{bmatrix}.
+\end{array}
+\]
 \begin{itemize}
 \item
 \[
@@ -60,7 +68,7 @@ Hence $\begin{bmatrix}
 \end{bmatrix}$ is the inverse of $\begin{bmatrix}
 \bm I&\bm 0\\\bm C&\bm I
 \end{bmatrix}$.
-\newpage
+
 
 \item
 \[
