--- a/week6/Friday.tex
+++ b/week6/Friday.tex
@@ -3,32 +3,38 @@
 \subsection{Review}
 \begin{itemize}
 \item
-\emph{Diagonalization: }If a $n\x n$ matrix is diagonalizable, it's equivalent to say it has $n$ ind. eigenvectors. So its eigenvectors form a basis for $\mathbb{R}^n$. $(*)$
+\emph{Diagonalization: }Suppose the matrix $\bm A\in\mathbb{R}^{n\times n}$ is diagonalizable, it's equivalent to say it has $n$ independent eigenvectors. These $n$ independent eigenvectors form a basis for $\mathbb{R}^n$. $(*)$
 \item
-If \textit{eigenvalues are distinct}, then $(*)$ holds.
+If all \textit{eigenvalues of $\bm A$ are distinct}, then $(*)$ holds.
 \end{itemize}
 \subsection{Fibonacci Numbers}
-We show a famous example, where eigenvalues tell how to find the formula for Fibonacci Numbers.\\
-\emph{Every new Fibonacci number come from two previous ones:}
+We show a famous example, where the eigenvalues tell how to find the formula for Fibonacci Numbers.
+\paragraph{Every new Fibonacci number come from two previous ones}
 \begin{align*}
 \text{\emph{Fibonacci Number: }}&0,1,1,2,3,5,8,13,\dots\\
 \text{\emph{Fibonacci Equation: }}&\bm F_{k+2}=\bm F_{k+1}+\bm F_{k},\quad\bm F_0=0,\bm F_1=1.
 \end{align*}
-\text{\emph{How to compute $\bm F_{100}$ without computing $\bm F_2$ to $\bm F_{99}$?}}\\
+\paragraph{How to compute $\bm F_{100}$ without computing $\bm F_2$ to $\bm F_{99}$?}
 The key is to begin with a matrix equation $\bm u_{k+1}=\bm A\bm u_k$. We put two Fibonacci number into a vector $\bm u_k$, then you will see the matrix $\bm A$:
-\[
-\text{Let }\bm u_k=\begin{bmatrix}
+
+Define $\bm u_k:=\begin{bmatrix}
 \bm F_{k+1}\\\bm F_k
-\end{bmatrix}.\text{ The rule }\left\{
+\end{bmatrix}.$ The rule $\left\{
 \begin{aligned}
-\bm F_{k+2}&=\bm F_{k+1}+\bm F_{k}\\\bm F_{k+1}&=\bm F_{k+1}
-\end{aligned}\right.\text{ is }\bm u_{k+1}=\begin{bmatrix}
+\bm F_{k+2}&=\bm F_{k+1}+\bm F_{k}\\\bm F_{0}&=0, \bm F_1=1
+\end{aligned}\right.$ implies that
+\[
+\begin{array}{ll}
+\bm u_{k+1}=\begin{bmatrix}
 1&1\\1&0
-\end{bmatrix}\bm u_{k}.\qquad
+\end{bmatrix}\bm u_{k},
+&
 \bm u_0=\begin{bmatrix}
 1\\0
 \end{bmatrix}
+\end{array}.
 \]
+
 Every step we mutliply $\bm u_0$ by $\bm A$. After 100 steps we obtain $\bm u_{100}=\bm A^{100}\bm u_0$:
 \[
 \bm u_{100}=\begin{bmatrix}
@@ -37,21 +43,32 @@ Every step we mutliply $\bm u_0$ by $\bm A$. After 100 steps we obtain $\bm u_{1
 1\\0
 \end{bmatrix}.
 \]
-But how to compute $\bm A^{100}$? If possible, you can diagonalize $\bm A$.\\ It's eay to show that for matrix $\bm A=\begin{bmatrix}
+
+How to compute the matrix powers $\bm A^{100}$? Diagonalizing $\bm A$ is possible. It's easy to verify that the matrix $\bm A=\begin{bmatrix}
 1&1\\1&0
-\end{bmatrix}$, we can decompose it into
-$
-\bm A=\bm S\bm D\bm S^{-1}.
-$\\
-where $\bm D=\diag(\lambda_1,\lambda_2)$, $\bm S=\begin{bmatrix}
+\end{bmatrix}$ can be decomposed into $
+\bm A=\bm S\bm D\bm S^{-1}
+$, where
+\[
+\begin{array}{ll}
+\bm D=\diag(\lambda_1,\lambda_2),
+&
+\bm S=\begin{bmatrix}
 \lambda_1&\lambda_2\\1&1
-\end{bmatrix}.$\\
-And $\begin{bmatrix}
+\end{bmatrix},\\
+\left(\lambda_1,\begin{bmatrix}
 \lambda_1\\1
-\end{bmatrix}$ is the eigenvector corresponding to $\lambda_1$, $\begin{bmatrix}
+\end{bmatrix}\right),
+&
+\left(\lambda_2,\begin{bmatrix}
 \lambda_2\\1
-\end{bmatrix}$ is the eigenvector corresponding to $\lambda_2$. You can verify $\lambda_1=\frac{1+\sqrt{5}}{2},\lambda_2=\frac{1-\sqrt{5}}{2}.$\\
-Thus we obtain $\bm A^{100}=\bm S\bm D^{100}\bm S^{-1}$. Hence we can compute $\bm u_{100}$:
+\end{bmatrix}\right)
+\mbox{ are two eigen-pairs of $\bm A$},
+\end{array}
+\]
+with $\lambda_1=\frac{1+\sqrt{5}}{2},\lambda_2=\frac{1-\sqrt{5}}{2}.$
+
+If follows that $\bm A^{100}=\bm S\bm D^{100}\bm S^{-1}$. Hence we can compute $\bm u_{100}$:
 \begin{align*}
 \bm u_{100}&=\bm A^{100}\bm u_0=\bm S\bm D^{100}\bm S^{-1}\bm u_0=\bm S\begin{pmatrix}
 \lambda_1^{100}&\\&\lambda_2^{100}
@@ -68,34 +85,33 @@ Thus we obtain $\bm A^{100}=\bm S\bm D^{100}\bm S^{-1}$. Hence we can compute $\
 \bm F_{101}\\\bm F_{100}
 \end{bmatrix}
 \end{align*}
-After messy computation, we obtain 
+
+After messy computation, we obtain $\bm F_{100}$:
 \[
 \bm F_{100}=\frac{1}{\sqrt{5}}\left[\lambda_1^{100}-\lambda_2^{100}\right]
 =\frac{1}{\sqrt{5}}\left[\left(\frac{1+\sqrt{5}}{2}\right)^{100}-\left(\frac{1-\sqrt{5}}{2}\right)^{100}\right]
 \]
-\emph{Another way to compute $\bm F_{100}$:}\\
-We wet $\bm S=\begin{bmatrix}
+\paragraph{Another way to compute $\bm F_{100}$}
+
+As $\bm u_{k+1} = \bm A\bm u_k$, we apply a trick to simplify $\bm u_0$ at first:
+
+We set $\bm S=\begin{bmatrix}
 \bm x_1&\bm x_2
 \end{bmatrix}$, where $\bm x_1=\begin{bmatrix}
 \lambda_1\\1
 \end{bmatrix},\bm x_2=\begin{bmatrix}
 \lambda_2\\1
-\end{bmatrix}.$ $\bm x_1,\bm x_2$ are eigenvectors of $\bm A$.\\
-We let $\bm u_k=\begin{bmatrix}
-\bm F_{k+1}\\\bm F_{k}
-\end{bmatrix}$.\\
-Firstly, We want to find linear combination of $\bm x_1$ and $\bm x_2$ to get $\bm u_0=\begin{bmatrix}
-1\\0
-\end{bmatrix}$:
+\end{bmatrix}.$
+It follows that
 \[
-\begin{bmatrix}
+\bm u_0=\begin{bmatrix}
 1\\0
-\end{bmatrix}=\frac{1}{\lambda_1-\lambda_2}\left(\begin{bmatrix}
+\end{bmatrix}
+=\frac{1}{\lambda_1-\lambda_2}\left(\begin{bmatrix}
 \lambda_1\\1
 \end{bmatrix}-\begin{bmatrix}
 \lambda_2\\1
-\end{bmatrix}\right)\qquad
-\text{or}\qquad
+\end{bmatrix}\right)\implies
 \bm u_0=\frac{\bm x_1-\bm x_2}{\lambda_1-\lambda_2}
 \]
 Then we multiply $\bm u_{0}$ by $\bm A^{100}$ to get $\bm u_{100}$:
@@ -104,10 +120,10 @@ Then we multiply $\bm u_{0}$ by $\bm A^{100}$ to get $\bm u_{100}$:
 &=\frac{\bm A^{99}(\bm A\bm x_1)-\bm A^{99}(\bm A\bm x_2)}{\lambda_1-\lambda_2}=\frac{\lambda_1\bm A^{99}\bm x_1-\lambda_2\bm A^{99}\bm x_2}{\lambda_1-\lambda_2}=\frac{\lambda_1^2\bm A^{98}\bm x_1-\lambda_2^2\bm A^{98}\bm x_2}{\lambda_1-\lambda_2}=\dots\\
 &=\frac{\lambda_1^{100}\bm x_1-\lambda_2^{100}\bm x_2}{\lambda_1-\lambda_2}
 \end{align*}
-Since $\lambda_1-\lambda_2=\sqrt{5}$, finally we obtain the same result.
+After simplification, finally we obtain the same result.
 \subsection{Imaginary Eigenvalues}
 The eigenvalues might not be real numbers sometimes.
-\begin{example}\qquad\\
+\begin{example}\label{Exp:7:6}
 Consider the rotation matrix given by $\bm K=\begin{bmatrix}
 0&-1\\1&0
 \end{bmatrix}$. It rotates our vector by $90\degree$:
@@ -123,8 +139,9 @@ Consider the rotation matrix given by $\bm K=\begin{bmatrix}
 \includegraphics[width=10cm]{week6/rotation}
 \caption{Rotate a vector by $90\degree$.}
 \end{figure}
-This rotation matrix exists eigenvector and eigenvalue, which means $\exists\bm v\ne\bm 0$ and $\lambda$ s.t. \[\bm K\bm v=\lambda\bm v.\] 
-However, this equation means this rotaion matrix doesn't change the direction of $\bm v$. But in geometric meaning it rotates vector $\bm v$ by $90\degree$. Why? This phenomenon will not happen unless we go to imaginary eigenvectors. Let's compute eigenvalues and eigenvectors for $\bm K$ first:
+This rotation matrix exists eigenvector and eigenvalue, i.e., $\exists\bm v\ne\bm 0$ and $\lambda$ s.t. 
+\[\bm K\bm v=\lambda\bm v.\] 
+However, the equation above means the rotaion matrix doesn't change the direction of $\bm v$. In geometric meaning it rotates vector $\bm v$ by $90\degree$. It seems a contradiction. \emph{This phenomenon will not happen unless we go to imaginary eigenvectors.} Let's compute eigenvalues and eigenvectors for $\bm K$ first:
 \[
 P_{\bm K}(\lambda)=\begin{vmatrix}
 \lambda&1\\-1&\lambda\end{vmatrix}
@@ -148,18 +165,22 @@ x_1\\x_2
 1\\i
 \end{pmatrix}.
 \end{align*}
-Moverover, we can do similar transformation for $\bm K$:
+Moverover, we can diagonalize $\bm K$:
 \[
+\begin{array}{ll}
 \bm D=\bm S^{-1}\bm K\bm S=\begin{pmatrix}
 i&\\&-i
-\end{pmatrix}\qquad\text{where $\bm S=\begin{bmatrix}
+\end{pmatrix}
+&
+\mbox{ where }\bm S=\begin{bmatrix}
 1&1\\-i&i
-\end{bmatrix}$.}
+\end{bmatrix}.
+\end{array}
 \]
 \end{example}
 \begin{remark}
 For motion in vector space, eigenvalues are ``speed''
- and eigenvectors are ``directions'' under basis $\bm S=\begin{bmatrix}
+ and eigenvectors are ``directions'' under the basis $\bm S=\begin{bmatrix}
 \bm x_1&\bm x_2&\dots&\bm x_n
 \end{bmatrix}$.
 \[
@@ -175,12 +196,17 @@ c_1&\dots&c_n
 \end{pmatrix}.
 \]
 \end{remark}
-\subsection{Complex Numbers}
-Even when the matrix is real, its eigenvalues of this matrix may be complex numbers. Example: A 2 by 2
-rotation matrix has no real eigenvectors. It rotates a vector by $90\degree$. But it has complex eigenvalues $i$ and $-i$.
+\subsection{Complex Numbers and vectors}
+From Example(\ref{Exp:7:6}) we can see that even for a real matrix, its eigenvaluesmay be complex numbers. 
 \begin{definition}[Complex Numbers]
-A cpmplex number $\bm x\in\mathbb{C}$ could be written as $\bm x=a+bi$, where $i^2=-1$.\\
-Its \emph{complex conjugate} is defined as $\bm{\bar x}=a-bi$.\\
+A complex number $\bm x\in\mathbb{C}$ could be written as 
+\[
+\bm x=a+bi,
+\] 
+where $i^2=-1$.
+
+Its \emph{complex conjugate} is defined as $\bm{\bar x}=a-bi$.
+
 Its \emph{modulus} is defined as $|\bm x|=\sqrt{a^2+b^2}=\sqrt{\bm x\bm{\bar x}}.$
 \end{definition}
 \begin{figure}[H]
@@ -188,31 +214,34 @@ Its \emph{modulus} is defined as $|\bm x|=\sqrt{a^2+b^2}=\sqrt{\bm x\bm{\bar x}}
 \caption{The number $z=a+bi$ corrsponds to the vector 
 $(a,b)$.}
 \end{figure}
-\subsection{Complex Vectors}
 \begin{definition}[Length (norm) for complex]
-For $z=\begin{bmatrix}
+Given a complex-valued $n$-dimension column vector
+\[
+z=\begin{bmatrix}
 z_1\\z_2\\\vdots\\z_n
-\end{bmatrix}\in\mathbb{C}^n$, its \emph{length (norm)}
- is defined as
+\end{bmatrix}\in\mathbb{C}^n,
+\] 
+its \emph{length (norm)} is defined as
 \[
 \|z\|=\sqrt{|z_1|^2+|z_2|^2+\dots+|z_n|^2}=\sqrt{\inp{z}{z}}=\sqrt{z_1\bar z_1+z_2\bar z_2+\dots+z_n\bar z_n}.
 \]
 \end{definition}
-Before we introduce the definition of inner product for complex, let's introduce the \textit{Hermitian} of a vector in $\mathbb{C}^n$:
-\begin{definition}[Hermitian]
-The hermitian of a vector in $\mathbb{C}^n$ is its \textit{conjugate transpose}.
+
+Before introducing the definition of inner product for complex, let's introduce the \emph{Hermitian transpose} for a complex-valued vector:
+\begin{definition}[Hermitian transpose]
+Given $\bm z\in\mathbb{C}^n$, we use $\bm z\Her$ denote its \emph{Hermitian transpose}:
 \[
 \bm z=\begin{bmatrix}
 z_1\\\vdots\\z_n
-\end{bmatrix}\qquad
+\end{bmatrix}\implies
 \bm z\Her=\bm{\bar z}\trans=\begin{bmatrix}
 \bar z_1&\dots&\bar z_n
 \end{bmatrix}.
 \]
+where $\bar z_i$ denotes the complex conjugate of $z_i$.
 \end{definition}
-\newpage
 \begin{definition}[Inner product]
-The inner product of real or complex vectors $\bm z$ and $\bm w$ is $\bm w\Her\bm z$, which is defined as
+The inner product of complex-valued vectors $\bm z$ and $\bm w$ is defined as
 \[
 \inp{\bm z}{\bm w}=\bm w\Her\bm z=\begin{bmatrix}
 \bm{\bar w_1}&\dots&\bm{\bar w_n}
@@ -222,22 +251,25 @@ The inner product of real or complex vectors $\bm z$ and $\bm w$ is $\bm w\Her\b
 \]
 \end{definition}
 \begin{remark}
-Note that with complex vectors, $\bm w\Her\bm z$ is different from $\bm z\Her\bm w$. \emph{The order of the vectors is now important!} In fact, $\bm z\Her\bm w=\bm{\bar z_1}\bm{w_1}+\dots+\bm{\bar z_n}\bm{w_n}$ is the complex conjugate of $\bm w\Her\bm z$.
+Note that with complex-valued vectors, $\bm w\Her\bm z$ is different from $\bm z\Her\bm w$. \emph{The order of the vectors is now important!} In fact, $\bm z\Her\bm w=\bm{\bar z_1}\bm{w_1}+\dots+\bm{\bar z_n}\bm{w_n}$ is the complex conjugate of $\bm w\Her\bm z$.
 \end{remark}
 \begin{definition}[Orthogonal]
-The two vectors of real or complex are \textit{orthogonal} if their \emph{inner product} is zero.
+Two complex-valued vectors are \textit{orthogonal} if their \emph{inner product} is zero:
 \[
 \bm z\perp\bm w\implies
 \inp{\bm z}{\bm w}=\bm w\Her\bm z=0
 \]
 \end{definition}
-\begin{example}\qquad\\
-Given $\bm z=\begin{pmatrix}
+\begin{example}
+Given complex-valued vectors
+$\bm z=\begin{pmatrix}
 1\\i
-\end{pmatrix}, \bm w=\begin{pmatrix}
+\end{pmatrix}$ and $\bm w=\begin{pmatrix}
 -i\\1
-\end{pmatrix}$.\\
-Although we have $\bm z\trans\bm w=0$, the two vectors are not perpendicular.\\ This is because $\inp{\bm z}{\bm w}=\bm w\Her\bm z=\begin{bmatrix}
+\end{pmatrix}$,
+although we have $\bm z\trans\bm w=0$, these two vectors are not perpendicular.
+
+This is because $\inp{\bm z}{\bm w}=\bm w\Her\bm z=\begin{bmatrix}
 i&1
 \end{bmatrix}\begin{bmatrix}
 1\\i
@@ -246,14 +278,17 @@ i&1
 \begin{example}
 The inner product of $\bm u=\begin{bmatrix}
 1\\i
-\end{bmatrix}$ with $\bm v=\begin{bmatrix}
+\end{bmatrix}$ and $\bm v=\begin{bmatrix}
 i\\1
-\end{bmatrix}$ is $\begin{bmatrix}
+\end{bmatrix}$ is 
+\[
+\inp{\bm u}{\bm v}=\begin{bmatrix}
 -i&1
 \end{bmatrix}\begin{bmatrix}
 1\\i
-\end{bmatrix}=0.$\\
-Although those vectors $(1,i)$ and $(i,1)$ don't look perpendicular, actually they are! \emph{A zero inner product still means vectors are orthogonal.}
+\end{bmatrix}=0.
+\]
+Although these vectors $(1,i)$ and $(i,1)$ don't look  perpendicular, actually they are!
 \end{example}
 \begin{proposition}[Conjugate symmetry]\qquad\\
 For two vectors $\bm z$ and $\bm w\in\mathbb{C}^{n}$, we have $\overline{\inp{\bm z}{\bm w}}=\inp{\bm w}{\bm z}.$
@@ -266,7 +301,7 @@ For two vectors $\bm z$ and $\bm w\in\mathbb{C}^{n}$, we have $\overline{\inp{\b
 \inp{\bm w}{\bm z}=\bm z\Her\bm w=\bm{\bar z}\trans\bm w
 =\bm{\bar z_1}\bm{w_1}+\dots+\bm{\bar z_n}\bm{w_n}
 \end{gather*}
-And since we have $\overline{\bm w\bm v}=\bm{\bar w}\bm{\bar v}$ and $\overline{\bm w+\bm v}=\bm{\bar w}+\bm{\bar v}$, it's easy to find that
+Since we have $\overline{\bm w\bm v}=\bm{\bar w}\bm{\bar v}$ and $\overline{\bm w+\bm v}=\bm{\bar w}+\bm{\bar v}$, it's easy to find that
 \[
 \overline{\bm{\bar w_1}\bm{z_1}+\dots+\bm{\bar w_n}\bm{z_n}}
 =\bm{w_1}\bm{\bar z_1}+\dots+\bm{w_n}\bm{\bar z_n}.
@@ -274,7 +309,7 @@ And since we have $\overline{\bm w\bm v}=\bm{\bar w}\bm{\bar v}$ and $\overline{
 \]
 Hence $\overline{\inp{\bm z}{\bm w}}=\inp{\bm w}{\bm z}.$
 \end{proof}
-\begin{proposition}[Sesquilinear]\qquad\\
+\begin{proposition}[Sesquilinear]
 For two vectors $\bm z$ and $\bm w\in\mathbb{C}^{n}$, we have
 \begin{gather}
 \inp{\alpha\bm z}{\bm w}=\alpha\inp{\bm z}{\bm w}\\
@@ -286,7 +321,7 @@ for scalars $\alpha$ and $\beta$.
 \begin{align*}
 \inp{\alpha\bm z}{\bm w}&=\bm w\Her(\alpha\bm z)\\&=\alpha(\bm w\Her\bm z)\\&=\alpha\inp{\bm z}{\bm w}.
 \end{align*}
-For equation (\ref{eq:16.2}), due to the conjugate symmetry, we derive
+To show the equation (\ref{eq:16.2}), due to the conjugate symmetry, we derive
 \[
 \inp{\bm z}{\beta\bm w}=\overline{\inp{\beta\bm w}{\bm z}}
 \]
@@ -295,15 +330,22 @@ Since $\inp{\beta\bm w}{\bm z}=\beta\inp{\bm w}{\bm z}=\beta\overline{\inp{\bm z
 \inp{\bm z}{\beta\bm w}=\overline{\beta\overline{\inp{\bm z}{\bm w}}}=\bar\beta\inp{\bm z}{\bm w}.
 \]
 \end{proof}
-\subsubsection{Hermitian of matrix}
-The Hermitian of a matrix $\bm A$ is given by
+
+\subsubsection{Hermitian transpose for matrix}
+Similarly, the \emph{Hermitian transpose} of a complex-valued matrix $\bm A$ is given by
 \[
 \bm A\Her:=\bar{\bm A}\trans
 \]
-And the rules for hermitian usually comes frim transpose. For example, the hermitian has the property
-\[
-(\bm A\bm B)\Her=\bm B\Her\bm A\Her.
-\]
+The rules for Hermitian transpose usually comes from transpose. For example, the Hermitian transpose for matrics has the property
+\begin{itemize}
+\item
+$(\bm A\bm B)\Her=\bm B\Her\bm A\Her.$
+\item
+$(\bm A\Her)\Her=\bm A$.
+\item
+$(\bm A+\bm B)\Her=\bm A\Her+\bm B\Her.$
+\end{itemize}
+The rules for Hermitian transpose of complex-valued vectors might be slightly different from the transpose of real-valued vectors:
 \begin{center}
 \begin{tabular}{cU}
 \hline
@@ -321,23 +363,24 @@ $\bm z\perp\bm w\Longleftrightarrow \bm w\Her\bm z=0$\\
 \end{tabular}
 \end{center}
 \begin{remark}
-\textit{What aspects of eigenvalues/eigenvectors are not nice?}\\
+\textit{What aspects of eigenvalues/eigenvectors are not nice?}
 \begin{itemize}
 \item
-Some matrix are \textit{non-diagonalizable}. (or equivalently, eigenvectors don't form a basis.)
+Some matrix are \textit{non-diagonalizable}. (or equivalently, eigenvectors aren't independent.)
 \item
-Eigenvalues can be \textit{complex}.
+Eigenvalues can be \textit{complex} even for a real-valued matrix.
 \end{itemize}
-We may ask, what matrix has all real eigenvalues? Let's focus on \textit{real} matrix first. For real symmetric matrix, its eigenvalues are all real!
 \end{remark}
-You should remember the proposition below carefully, they are very important.
+We are curious about what kind of matrix has all real eigenvalues? Let's focus on real-valued matrix first. The answer is the real-valued symmetric matrix.
+
+You should remember the proposition(\ref{real_symmetric}) below carefully, they are very important!
 \begin{proposition}\label{real_symmetric}
 For a \textit{real symmetric} matrix $\bm A$, 
 \begin{itemize}
 \item
 All eigenvalues are real numbers.
 \item
-Its eigenvectors corresponding to distinct eigenvalues are orthogonal.
+The eigenvectors associated with distinct eigenvalues are orthogonal.
 \item
 $\bm A$ is diagonalizable. More general, all eigenvectors of $\bm A$ are orthogonal!
 \end{itemize}
@@ -349,7 +392,7 @@ Before the proof, let's introduce a useful formula: $\inp{\bm{Ax}}{\bm y}=\inp{\
 \begin{proof}
 \begin{itemize}
 \item
-For the first part, suppose $\bm x$ is any eigenvectors of $\bm A$ corresponding to eigenvalue $\lambda$. Then we obtain
+For the first part, given any eigen-pair $(\lambda, \bm x)$, we we obtain
 \[
 \inp{\bm{Ax}}{\bm x}=\inp{\bm x}{\bm A\Her\bm x}
 \]
@@ -357,10 +400,15 @@ For the first part, suppose $\bm x$ is any eigenvectors of $\bm A$ corresponding
 \item
 For the LHS, $\inp{\bm{Ax}}{\bm x}=\inp{\lambda\bm x}{\bm x}=\lambda\inp{\bm x}{\bm x}$.
 \item
-For the RHS, Since $\bm A$ is a real symmetric matrix, we have $\bm A\Her=\bar{\bm A}\trans=\bm A\trans=\bm A$.\\ Hence $\inp{\bm x}{\bm A\Her\bm x}=\inp{\bm x}{\bm{Ax}}$. Moreover, $\inp{\bm x}{\bm{Ax}}=\inp{\bm x}{\lambda\bm x}=\bar\lambda\inp{\bm x}{\bm x}$.\\ So we have $\inp{\bm x}{\bm A\Her\bm x}=\bar\lambda\inp{\bm x}{\bm x}.$
+For the RHS, since $\bm A$ is a real symmetric matrix, we have 
+\[
+\bm A\Her=\bar{\bm A}\trans=\bm A\trans=\bm A\implies
+\inp{\bm x}{\bm A\Her\bm x}=\inp{\bm x}{\bm{Ax}}
+\]
+Moreover, $\inp{\bm x}{\bm{Ax}}=\inp{\bm x}{\lambda\bm x}=\bar\lambda\inp{\bm x}{\bm x}$. Hence, $\inp{\bm x}{\bm A\Her\bm x}=\bar\lambda\inp{\bm x}{\bm x}.$
 \end{itemize}
-Finally we have $\lambda\inp{\bm x}{\bm x}=\inp{\bm{Ax}}{\bm x}=\inp{\bm x}{\bm A\Her\bm x}=\bar\lambda\inp{\bm x}{\bm x}.$\\
-Since $\bm x\ne\bm 0$, $\inp{\bm x}{\bm x}\ne0.$ Hence $\lambda=\bar\lambda$. So $\lambda$ is real.
+Finally we have $\lambda\inp{\bm x}{\bm x}=\bar\lambda\inp{\bm x}{\bm x}.$
+Since $\bm x\ne\bm 0$, $\inp{\bm x}{\bm x}\ne0.$ Hence $\lambda=\bar\lambda$, i.e, $\lambda$ is real.
 \item
 For the second part, suppose $\bm x_1$ and $\bm x_2$ are two eigenvectors corresponding to two \emph{distinct} eigenvalues $\lambda_1$ and $\lambda_2$ respectively. Our goal is to show $\bm x_1\perp\bm x_2$. We find that
 \[
@@ -370,38 +418,42 @@ For the second part, suppose $\bm x_1$ and $\bm x_2$ are two eigenvectors corres
 \item
 For LHS, $\inp{\bm A\bm x_1}{\bm x_2}=\inp{\lambda_1\bm x_1}{\bm x_2}=\lambda_1\inp{\bm x_1}{\bm x_2}$.
 \item
-For RHS, $\inp{\bm x_1}{\bm A\Her\bm x_2}=\inp{\bm x_1}{\bm A\bm x_2}=\inp{\bm x_1}{\lambda_2\bm x_2}=\bar\lambda_2\inp{\bm x_1}{\bm x_2}$. Since we have shown that all eigenvalues are real for $\bm A$, we obtain $\bar\lambda=\lambda$.\\
-Hence $\inp{\bm x_1}{\bm A\Her\bm x_2}=\lambda_2\inp{\bm x_1}{\bm x_2}.$
+For RHS, $\inp{\bm x_1}{\bm A\Her\bm x_2}=\inp{\bm x_1}{\bm A\bm x_2}=\inp{\bm x_1}{\lambda_2\bm x_2}=\bar\lambda_2\inp{\bm x_1}{\bm x_2}$. From part one we derive that $\inp{\bm x_1}{\bm A\Her\bm x_2}=\lambda_2\inp{\bm x_1}{\bm x_2}.$
 \end{itemize}
-Hence $\lambda_1\inp{\bm x_1}{\bm x_2}=\inp{\bm A\bm x_1}{\bm x_2}=\inp{\bm x_1}{\bm A\Her\bm x_2}=\lambda_2\inp{\bm x_1}{\bm x_2}.$\\ Since $\lambda_1\ne\lambda_2$, we obtain $\inp{\bm x_1}{\bm x_2}=0.$ That is to say, $\bm x_1\perp\bm x_2.$
+Hence $\lambda_1\inp{\bm x_1}{\bm x_2}=\lambda_2\inp{\bm x_1}{\bm x_2}.$\\ Since $\lambda_1\ne\lambda_2$, we obtain $\inp{\bm x_1}{\bm x_2}=0$, i.e., $\bm x_1\perp\bm x_2.$
 \item
 The proof for the third part is not required.
 \end{itemize}
 \end{proof}
 \subsection{Spectral Theorem}
-We state a theorem without proving it:
+We have a stronger version of the third part of proposition(\ref{real_symmetric}):
 \begin{theorem}[Spectral Theorem]
 Any real symmetric matrix $\bm A$ has the factorization \begin{equation}
 \bm A=\bm Q\Lambda\bm Q\trans,
-\end{equation} where $\Lambda\in\mathbb{R}^{n\x n}$ is diagonal matrix, $\bm Q\in\mathbb{R}^{n\x n}$ is orthogonal matrix.
+\end{equation} where $\Lambda\in\mathbb{R}^{n\x n}$ is diagonal matrix, $\bm Q\in\mathbb{R}^{n\x n}$ is orthogonal.
 \end{theorem}
 \begin{proof}
-From proposition (\ref{real_symmetric}) we know that $\bm A$ is \textit{diagonalizable}, which means there exists invertible matrix $\bm Q$ and diagonal matrix $\Lambda$ such that
+From proposition (\ref{real_symmetric}) we know that $\bm A$ is \textit{diagonalizable}, i.e., there exists invertible matrix $\bm Q$ and diagonal matrix $\Lambda$ such that
 \[
 \bm A=\bm Q\Lambda\bm Q^{-1}
 \]
-Then we know that all eigenvalues of $\bm A$ are real numbers, so $\Lambda$ is a real matrix.\\
-Since all eigenvectors $\bm x_1,\dots,\bm x_n$ are orthogonal, matrix $\bm Q=\begin{bmatrix}
+
+From proposition(\ref{real_symmetric}), since all eigenvalues of $\bm A$ are real, $\Lambda$ is a real matrix.
+
+Since all eigenvectors $\bm x_1,\dots,\bm x_n$ are orthogonal, from proposition(\ref{Pro:7:5}), matrix $\bm Q=\begin{bmatrix}
 \bm x_1&\dots&\bm x_n
-\end{bmatrix}$ is orthogonal matrix.
+\end{bmatrix}$,  we imply $\bm Q$ is orthogonal.
 \end{proof}
 \begin{remark}
-$\bm A=\bm Q\Lambda\bm Q\trans=\bm Q\Lambda\bm Q^{-1}$. So $\bm A$ could be diagonalized by an orthogonal matrix.\\
-If we let $\bm Q=\begin{bmatrix}
+\begin{enumerate}
+\item
+Since $\bm A=\bm Q\Lambda\bm Q\trans=\bm Q\Lambda\bm Q^{-1}$, $\bm A$ could be diagonalized by an orthogonal matrix.
+\item
+Suppose $\bm Q=\begin{bmatrix}
 q_1&\dots&q_n
-\end{bmatrix}$, $\Lambda=\diag(\lambda_1,\dots,\lambda_n)$, then $\bm A$ could be written as:
+\end{bmatrix}$, $\Lambda=\diag(\lambda_1,\dots,\lambda_n)$, then $\bm A$ could be rewritten as:
 \[
-\bm A=\bm Q\Lambda\bm Q\trans=
+\bm A=
 \begin{bmatrix}
 q_1&\dots&q_n
 \end{bmatrix}\begin{bmatrix}
@@ -414,18 +466,19 @@ Or equivalently,
 \begin{equation}
 \bm A=\lambda_1q_1q_1\trans+\lambda_2q_2q_2\trans+\dots+\lambda_nq_nq_n\trans
 \end{equation}
-Note that for each term $q_iq_i\trans$ is the \emph{projection matrix} to $q_i$. Hence this theorm says that a real symmetric matrix is a combination of projection matrices.
+Note that each term $q_iq_i\trans$ is the \emph{projection matrix} for $q_i$. Hence spectral theorem says that a real symmetric matrix is a linear combination of projection matrices.
+\end{enumerate}
 \end{remark}
-\newpage
-\begin{example}\qquad\\
-If we write $\bm A$ as combination of projection matrix, we can have a deep understanding for $\bm{Ax}$:
+
+\begin{example}
+If we write $\bm A$ as a linear combination of projection matrices, we can have a deep understanding for the linear transformation $\bm{Ax}$:
 \[
 \bm A=\sum_{j=1}^{n}\lambda_jq_jq_j\trans
 \implies
 \bm{Ax}=\sum_{j=1}^{n}\lambda_jq_jq_j\trans\bm x=
 \sum_{j=1}^{n}\lambda_j(q_jq_j\trans\bm x).
 \]
-If we set $n=2$, it's clear to find that
+For the case $n=2$, it's clear to find that
 \[
 \bm x=c_1q_1+c_2q_2\implies
 \bm{Ax}=\lambda_1c_1q_1+\lambda_2c_2q_2
@@ -436,28 +489,42 @@ Showing in graph, we have
 \caption{Linear transformation of $\bm A$.}
 \end{figure}
 \end{example}
-The formula $\bm A=\sum_{j=1}^{n}\lambda_jq_jq_j\trans$ or $\bm A=\bm Q\Lambda\bm Q\trans$ are called \emph{eigendecomposition} or \emph{eigenvalue decomposition}.\\
-And sometimes $\{\lambda_1,\dots,\lambda_n\}$ are called \emph{spectum} of $\bm A$.\\
-Also, we can extend our result from real symmetric matrix into complex:
+\begin{remark}
+The formula \[
+\bm A=\sum_{j=1}^{n}\lambda_jq_jq_j\trans\mbox{ or }\bm A=\bm Q\Lambda\bm Q\trans
+\] are called the \emph{eigen-decomposition} or \emph{eigenvalue decomposition} of $\bm A$.
+
+$\{\lambda_1,\dots,\lambda_n\}$ are called the \emph{spectum} of $\bm A$.
+\end{remark}
+Also, we can extend our result from real symmetric matrix into complex-valued.
 \subsection{Hermitian matrix}
-\begin{definition}[Hermitian matrix]
-A matrix $\bm M\in\mathbb{C}^{n\x n}$ is said to be \emph{Hermitian} if $\bm M=\bm M\Her$.
+\begin{definition}[Symmetric and Hermitian]
+\begin{itemize}
+\item
+Recall that a square matrix $\bm A$ is said to be \emph{symmetric} if $a_{ij}=a_{ji}$ for all $i,j$, or equivalently, if $\bm A\trans=\bm A$
+\item
+For complex-valued case, a square matrix $\bm A$ is said to be \emph{Hermitian} if $a_{ij}=\bar a_{ji}$ for all $i,j$, or equivalently, if $\bm A\Her=\bm A$.
+\end{itemize}
+we denote the set of all $n\times n$ real symmetric matrices by $\mathbb{S}^n$; and we denote the set of all $n\times n$ complex Hermitian matrices by $\mathbb{H}^n$.
 \end{definition}
+
 \emph{Example: }$\bm M=\begin{bmatrix}
 3&2-i\\2+i&4
-\end{bmatrix}$ is Hermitian matrix since $\bm M=\bm M\Her$.\\
-If $\bm M$ is a real matrix, then $\bm M=\bm M\Her\Longleftrightarrow\bm M=\bm M\trans$. So if the real matrix is Hermitian matrix, that is to say it is real symmetric matrix.\\
+\end{bmatrix}\in\mathbb{H}^2$ since $\bm M=\bm M\Her$.
+
+If $\bm M$ is a real matrix, then $\bm M=\bm M\Her\Longleftrightarrow\bm M=\bm M\trans$. So if the real matrix is a Hermitian matrix, it is equivalent to say it is real symmetric matrix.
+
 Hermitian matrix has many interesting properties:
 \begin{proposition}
-If $\bm M=\bm M\Her$, then $\bm x\Her\bm M\bm x\in\mathbb{R}$ for any complex vectors $\bm x$.
+If $\bm M\in\mathbb{H}^n$, then $\bm x\Her\bm M\bm x\in\mathbb{R}$ for any complex-valued vectors $\bm x$.
 \end{proposition}
 \begin{proof}
-We set $\alpha:=\bm x\Her\bm M\bm x$. Since $\alpha$ is a number (easy to check), we obtain $\alpha\trans=\alpha.$\\
-Thus $\bar\alpha=\alpha\Her=(\bm x\Her\bm M\bm x)\Her=\bm x\Her\bm M\bm x=\alpha.$\\
-Hence $\alpha$ is real.
+We set $\alpha:=\bm x\Her\bm M\bm x$. Since $\alpha$ is a scalar (easy to check), we obtain $\alpha\trans=\alpha.$
+
+It follows that $\bar\alpha=\alpha\Her=(\bm x\Her\bm M\bm x)\Her=\bm x\Her\bm M\bm x=\alpha.$ Hence $\alpha$ is real.
 \end{proof}
 \begin{proposition}
-If $\bm M=\bm M\Her$, then $\inp{\bm x}{\bm{My}}=\inp{\bm{Mx}}{\bm y}.$
+If $\bm M\in\mathbb{H}^n$, then $\inp{\bm x}{\bm{My}}=\inp{\bm{Mx}}{\bm y}.$
 \end{proposition}
 \begin{proof}
 By definition,
@@ -465,17 +532,17 @@ By definition,
 \inp{\bm x}{\bm{My}}=(\bm{My})\Her\bm x=\bm y\Her\bm M\Her\bm x=\bm y\Her\bm M\bm x=\inp{\bm{Mx}}{\bm y}.
 \]
 \end{proof}
-And we have general orthogonal matrices for complex matrices:
+We have the general orthogonal matrices for complex-valued matrices:
 \begin{definition}[Unitary]
-A unitary matrix is a complex matrix that has \emph{orthonormal columns}. In other words, $\bm U$ is unitary if $\bm U\Her\bm U=\bm I.$
+A complex-valued matrix having \emph{orthonormal columns} is said to be unitary. In other words, $\bm U$ is unitary if $\bm U\Her\bm U=\bm I.$
 \end{definition}
-And the spectral theorm can also apply for Hermitian matrix:
-\begin{theorem}
+The spectral theorem can also apply for Hermitian matrix:
+\begin{theorem}[Spectral Theorem]
 Any Hermitian matrix $\bm M$ can be factorized into
 \[
 \bm M=\bm U\Lambda\bm U\Her
 \]
-where $\Lambda$ is a real diagonal matrix, $\bm U$ is a complex unitary matrix.
+where $\Lambda$ is a real diagonal matrix, $\bm U$ is a complex-valued unitary matrix.
 \end{theorem}
 \begin{remark}
 What good points does Hermitian matrix have?
@@ -483,7 +550,7 @@ What good points does Hermitian matrix have?
 \item
 It is diagonalizable.
 \item
-Its eigenvectors form orthogonal basis.
+Its eigenvectors form the orthogonal basis.
 \item
 Its eigenvalues are all real.
 \end{itemize}
