--- a/week7/Thursday.tex
+++ b/week7/Thursday.tex
@@ -5,290 +5,295 @@ Three ways for matrix decomposition are significant in linear alegbra:
 \[
 \left\{
 \begin{lgathered}
-\text{LU (from \emph{elimination})}\\
-\text{QR (from \emph{orthogonalization})}\\
-\text{SVD (from \emph{eigenvectors})}
+\text{LU (from \emph{Gaussian elimination})}\\
+\text{QR (from \emph{Orthogonalization})}\\
+\text{SVD (from \emph{eigenvalues and eigenvectors})}
 \end{lgathered}
 \right.
 \]
-We have learnt the first two decomposition. And the third way is increasingly significant in the information age.\\
-In the last lecture we talk about \textit{eigendecomposition} for \emph{real symmetric} matrices and \textit{diagonalization}. However, can we get some \emph{universal} decomposition? Is there any decomposition that can be applied to all matrices?\\
-The anwer is yes. The key idea is to do \textit{symmetrization}, we have to consider $\bm A\bm A\trans$ and $\bm A\trans\bm A$.
+We have learnt the first two decomposition. And the third way is increasingly significant in the information age.
+
+In the last lecture we learnt that any real symmetric matrix adimits \textit{diagonalization}, i.e., \textit{eigendecomposition}. However, can we get some \emph{universal} decomposition, i.e., Is there any decomposition that can be applied to all matrices?
+
+The anwer is yes. The key idea behind is to do \textit{symmetrization}. We have to consider $\bm A\bm A\trans$ and $\bm A\trans\bm A$.
 \subsection{SVD: Singular Value Decomposition}
-Any matrix $\bm A\in\mathbb{R}^{m\x n}$ could be factorized into
+\begin{theorem}[SVD]
+Given any matrix $\bm A\in\mathbb{R}^{m\times n}$, there exists a 3-tuple $(\bm U,\bm\Sigma,\bm V)\in\mathbb{R}^{m\times m}\times \mathbb{R}^{m\times n}\times \mathbb{R}^{n\times n}$ such that
 \[
-\bm A=\bm U\bm\Sigma\bm V\trans
+\bm A=\bm U\bm\Sigma\bm V\trans,
 \]
-where $\bm U$ is a $m\x m$ \emph{orthogonal} matrix,
-$\bm\Sigma$ is a $m\x n$ ``\textit{diagonal}'' (we will define it later) matrix,
-$\bm V$ is a $n\x n$ \emph{orthogonal} matrix.\\
-If $\bm V$=$\bm U$ (then consequently $m=n$), then this is exactly \textit{eigendecomposition}.\\
-Specifically speaking,\\
-$\bm U$ is $m\x m$ matrix s.t. \textit{columns are eigenvectors of $\bm A\bm A\trans$.}\\
-$\bm V$ is $n\x n$ matrix s.t. \textit{columns are eigenvectors of $\bm A\trans\bm A$.}\\
-$\bm\Sigma$ is $m\x n$ matrix which has the form:
+where $\bm U,\bm V$ are \emph{orthogonal}, and $\bm\Sigma$ takes the form
 \[
+\bm\Sigma_{ij}=\left\{
+\begin{aligned}
+\sigma_i,&\quad i=j\\
+0,&\quad i\ne j
+\end{aligned},
+\right.
+\]
+with $\sigma_1\ge\sigma_2\ge\cdots\ge\sigma_p\ge0$ and with $p=\min\{m,n\}$.
+\end{theorem}
+\begin{remark}
+\begin{itemize}
+\item
+If $\bm V=\bm U$, this decomposition is exactly \emph{eigen-decomposition}.
+\item
+Specifically speaking,
+\begin{itemize}
+\item
+$\bm U\in\mathbb{R}^{m\times m}$ such that its columns are eigenvectors of $\bm A\bm A\trans$
+\item
+ $\bm V\in\mathbb{R}^{n\times n}$ such that its columns are eigenvectors of $\bm A\trans\bm A$
+ \item
+$\bm\Sigma\in\mathbb{R}^{m\times n}$ looks like a diagonal matrix, i.e., it has the form
+\[
+\begin{array}{ll}
 \bm\Sigma=\begin{pmatrix}
 \sigma_1&&\\&\ddots&\\&&\sigma_n\\
 0&\dots&0\\\vdots&\ddots&\vdots\\0&\dots&0
-\end{pmatrix}\text{ if $m\ge n$}\quad\text{or }
+\end{pmatrix}\text{ if $m\ge n$}\\
 \bm\Sigma=\begin{pmatrix}
 \sigma_1&&&0&\dots&0\\&\ddots&&\vdots&\ddots&\vdots\\&&\sigma_m&0&\dots&0\end{pmatrix}\text{ if $m< n$}.
-\]
-And $\sigma_i=\sqrt{\lambda_i}$ for $i=1,2,\dots,\min\{m,n\}$, where \textit{$\lambda_i$'s are eigenvalues of $\bm A\bm A\trans$ or $\bm A\trans\bm A$.} (if $m\ge n$), then $\lambda_i$'s are eigenvalues of $\bm A\trans\bm A$; otherwise $\lambda_i$'s are eigenvalues of $\bm A\bm A\trans$.)
-\begin{theorem}
-SVD always exists for any \emph{real} matrix.
-\end{theorem}
-\begin{proof}
-For any $m\x n$ matrix $\bm A$, WLOG, we set $m\ge n$.
-\begin{itemize}
-\item
-Firstly, we consider the case that all $\lambda_j\ne0$ for $j=1,\dots,n$. ($\lambda_j$'s are eigenvalues of $\bm A\trans\bm A$.)\\
-Since $\bm A\trans\bm A$ is \textit{real symmetric}, we do the eigendecomposition:
-\[
-\bm A\trans\bm A=\bm V\bm D\bm V\trans
-\]
-where $\bm V$ is \textit{orthonormal} matrix and $\bm D$ is \textit{diagonal} matrix.\\
-Also, the eigenvectors of $\bm A\trans\bm A$ are orthogonal (note that in proposition (16.3) we claim that the eigenvectors of diagonalizable matrix are orthogonal.):
-\enlargethispage{1cm}
-\[
-\bm A\trans\bm A\bm v_j=\lambda_j\bm v_j\text{ for }j=1,\dots,n
-\]
-where $\bm v_j$'s are eigenvectors of $\bm A\trans\bm A$ s.t. they form orthonormal basis of $\mathbb{R}^n$.\\
-\newpage
-Note that given any matrix $\bm A$, $\bm V=\begin{bmatrix}
-\bm v_1&\dots&\bm v_n
-\end{bmatrix}$ is immediately defined. (This is because $\bm v_j$'s are eigenvectors of $\bm A\trans\bm A$.)\\
-If we want to show $\bm A=\bm U\bm\Sigma\bm V\trans$, since $\bm A$ and $\bm V$ is defined, we only need to show there exists \textit{special} $\bm U$ and $\bm\Sigma$ such that
-\[
-\bm U\bm\Sigma=\bm A(\bm V\trans)^{-1}=\bm A\bm V.
-\]
-\begin{itemize}
-\item
-First step, we construct such $\bm U$ and $\bm\Sigma$:\\
-Since $\lambda_j$'s are eigenvalues of $\bm A\trans\bm A$ associated with eigenvectors $\bm v_j$, we obtain:
-\[
-\|\bm A\bm v_j\|^2=\bm v_j\trans(\bm A\trans\bm A\bm v_j)=\bm v_j\trans(\lambda_j\bm v_j)=\lambda_j(\bm v_j\trans\bm v_j)=\lambda_j\|\bm v_j\|^2.
-\]
-Hence $\lambda_j=\frac{\|\bm A\bm v_j\|^2}{\|\bm v_j\|^2}>0$. (As we assume $\lambda_j\ne0$, this is strictly inequality.)\\
-Hence we define $\bm u_j:=\bm A\bm v_j\frac{1}{\sqrt{\lambda_j}}\in\mathbb{R}^{m\x 1}.$ for $j=1,\dots,n$.\\
-And then we construct $\bm U$ and $\bm\Sigma$:
-\begin{align*}
-\bm U:&=\begin{bmatrix}
-\bm u_1&\dots&\bm u_n
-\end{bmatrix}\in\mathbb{R}^{m\x n}.\\
-\bm\Sigma:&=\diag(\sqrt{\lambda_1},\dots,\sqrt{\lambda_n})\in\mathbb{R}^{n\x n}.
-\end{align*}
-It's easy to verify that $\bm U\bm\Sigma=\bm{AV}$.
-\item
-Next step, we show that $\{\bm u_1,\dots,\bm u_n\}$ is orthonormal set:\\
-For any $\bm u_i,\bm u_j$, we have
-\begin{align*}
-\inp{\bm u_i}{\bm u_j}&=\frac{1}{\sqrt{\lambda_i}\sqrt{\lambda_j}}\inp{\bm A\bm v_i}{\bm A\bm v_j}\\
-&=\frac{1}{\sqrt{\lambda_i}\sqrt{\lambda_j}}\inp{\bm v_i}{\bm A\trans\bm A\bm v_j}
-\qquad\text{Due to the useful formula $\inp{\bm{Ax}}{\bm y}=\inp{\bm x}{\bm A\Her\bm y}$.}
-\\
-&=\frac{1}{\sqrt{\lambda_i}\sqrt{\lambda_j}}\inp{\bm v_i}{\lambda_j\bm v_j}=
-\sqrt{\frac{\lambda_j}{\lambda_i}}\inp{\bm v_i}{\bm v_j}
-\end{align*}
-Since $\{\bm v_1,\dots,\bm v_n\}$ are orthonormal, we obtain
-\[
-\inp{\bm v_i}{\bm v_j}=\begin{cases}
-1,&i=j\\
-0,&i\ne j
-\end{cases}\implies
-\inp{\bm u_i}{\bm u_j}=\begin{cases}
-1,&i=j\\
-0,&i\ne j
-\end{cases}
-\]
-Hence $\{\bm u_1,\dots,\bm u_n\}$ are orthonormal.
-\item
-Then we show that $\{\bm u_1,\dots,\bm u_n\}$ are eigenvectors of $\bm A\bm A\trans$:\\
-For $j=1,\dots,n$, we obtain:
-\begin{align*}
-\bm A\bm A\trans\bm u_j&=\bm A\bm A\trans\bm A\bm v_j\frac{1}{\sqrt{\lambda_j}}\qquad\text{by definition of $\bm u_j$.}\\
-&=\bm A(\bm A\trans\bm A\bm v_j)\frac{1}{\sqrt{\lambda_j}}=\bm A\lambda_j\bm v_j\frac{1}{\sqrt{\lambda_j}}\\
-&=\sqrt{\lambda_j}\bm A\bm v_j=\lambda_j\times(\frac{1}{\sqrt{\lambda_j}}\bm A\bm v_j)\\
-&=\lambda_j\bm u_j.
-\end{align*}
-\item
-We notice that in SVD $\bm U$ is m by m matrix, $\bm\Sigma$ is m by n matrix. Hence we need to \textit{reconstruct} our $\bm U$ and $\bm\Sigma$ in step 1:\\
-Since $\{\bm u_1,\dots,\bm u_n\}$ are eigenvectors of $\bm A\bm A\trans$, and $\bm A\bm A\trans$ has $m$ orthogonal eigenvectors, so we pick $\bm u_{n+1},\dots,\bm u_m$ s.t. $\{\bm u_1,\dots,\bm u_{n},\bm u_{n+1},\dots,\bm u_m\}$ are $m$ orthonormal eigenvectors of $\bm A\bm A\trans$.\\
-Then we let
-\begin{gather*}
-\bm U:=\begin{bmatrix}
-\bm u_1&\dots&\bm u_m
-\end{bmatrix}\in\mathbb{R}^{m\x m}.\\
-\bm\Sigma:=\begin{pmatrix}
-\sqrt{\lambda_1}&&\\&\ddots&\\&&\sqrt{\lambda_n}\\
-0&\dots&0\\\vdots&\ddots&\vdots\\0&\dots&0
-\end{pmatrix}\in\mathbb{R}^{m\x n}.
-\end{gather*}
-It's easy to verify that 
-\[
-\bm U\bm\Sigma=\bm{AV}
-\]
-Hence finally we obtain
-\[
-\bm U\bm\Sigma\bm V\trans=\bm A\bm V\bm V\trans=\bm A.
+\end{array}
 \]
 \end{itemize}
-\item
-For there exists some $\lambda_j=0$ case, we discuss it in next section.
+with $\sigma_i=\sqrt{\lambda_i}$ for $i=1,2,\dots,\min\{m,n\}$, where \textit{$\lambda_i$'s are eigenvalues of $\bm A\bm A\trans$ (if $m< n$) or $\bm A\trans\bm A$. (if $m\ge n$)})
 \end{itemize}
-\end{proof}
-\subsection{Remark on SVD decomposition}
-\subsubsection{Remark 1}
-The eigenvalues for $\bm A\trans\bm A$ and $\bm A\bm A\trans$ are not always nonzero.
+\begin{definition}[SVD]
+The above decomposition is called the \emph{singular value decomposition (SVD)}
+\begin{itemize}
+\item
+$\sigma_i$ is called the $i$th \emph{singular value}
+\item
+The columns of $\bm U$ and $\bm V$, $\bm u_i$ and $\bm v_i$ are called the $i$th \emph{left and right singular vectors}, respectively.
+\item
+$(\sigma_i,\bm u_i)$ are the eigen-pairs of $\bm A\bm A\trans$; $(\sigma_i,\bm v_i)$ are the eigen-pairs of $\bm A\trans\bm A$ for $i=1,2,\dots,\min\{m,n\}$.
+\item
+The following notations may be used to denote the singular values of $\bm A$:
+\[
+\sigma_{\max}(\bm A)\ge\sigma_1(\bm A)\ge\sigma_2(\bm A)\ge\cdots\ge\sigma_p(\bm A)=\sigma_{\min}(\bm A)
+\]
+\end{itemize}
+\end{definition}
+\end{remark}
+The proof for the SVD decomposition is constructive. To see the insights of the proof, let's study the case $m=n$ first, then we extend the proof for general case:
 \begin{proposition}
-For $m\x n$ matrix $\bm A$, suppose $\rank(\bm A)=r$,
-and the eigenvalues for $\bm A\trans\bm A$ are 
-\[
-\eig(\bm A\trans\bm A)=\{\lambda_1,\dots,\lambda_r,\overbrace{0,\dots\dots,0}^{\text{Totally $n-r$ terms}}\}, 
-\]
-then eigenvalues for $\bm A\bm A\trans$ are
-\[
-\eig(\bm A\bm A\trans)=\{\lambda_1,\dots,\lambda_r,\underbrace{0,\dots\dots,0}_{\text{Totally $m-r$ terms}}\}.
-\]
+SVD always exists for any \emph{real square nonsingular} matrix.
+\end{proposition}
+\begin{proof}
+For $\bm A\in\mathbb{R}^{n\times n}$, you may verify that $\bm A\bm A\trans$ is PD, thus it admits the eigen-decomposition:
+\begin{equation}
+\begin{array}{ll}
+\bm A\bm A\trans=\bm U\bm\Sigma\bm U\trans,
+&
+\mbox{with }\lambda_1\ge\cdots\ge\lambda_n>0.
+\end{array}
+\end{equation}
+
+We define $\bm\Sigma:=\diag(\sqrt{\lambda_1},\dots,\sqrt{\lambda_m})$ and $\bm V:=\bm A\trans\bm U\bm\Sigma^{-1}$.
+
+You may verify that $\bm U\bm\Sigma\bm V\trans=\bm A$ and $\bm V\trans\bm V=\bm I$, i.e., $\bm V$ is orthogonal. The proof is complete.
+\end{proof}
+\begin{proposition}
+SVD always exists for any \emph{real} matrix.
 \end{proposition}
 \begin{proof}
 \begin{itemize}
 \item
-Firstly let's prove a lemma:
-\[
-\det(\bm I_m-\bm{AB})=\det(\bm I_n-\bm{BA}).,
-\]
-where $\bm A\in\mathbb{R}^{m\x n}$ and $\bm B\in\mathbb{R}^{n\x m}.$\\
-We notice the two equality:
-\begin{align}
-\begin{pmatrix}
-\bm I_n&\bm B\\
-\bm A&\bm I_m
-\end{pmatrix}\begin{pmatrix}
-\bm I_n&-\bm B\\
-\bm 0_{m\x n}&\bm I_m
-\end{pmatrix}
-&=\begin{pmatrix}
-\bm I_n&\bm 0_{n\x m}\\
-\bm A&\bm I_m-\bm{AB}
-\end{pmatrix}\\
-\begin{pmatrix}
-\bm I_n&-\bm B\\
-\bm 0_{m\x n}&\bm I_m
-\end{pmatrix}
-\begin{pmatrix}
-\bm I_n&\bm B\\
-\bm A&\bm I_m
-\end{pmatrix}
-&=\begin{pmatrix}
-\bm I_n-\bm{BA}&\bm 0_{n\x m}\\
-\bm A&\bm I_m
-\end{pmatrix}
-\end{align}
-We take determinant both sides for the two equations above:
-\begin{align}
-\begin{vmatrix}
-\bm I_n&\bm B\\
-\bm A&\bm I_m
-\end{vmatrix}\begin{vmatrix}
-\bm I_n&-\bm B\\
-\bm 0_{m\x n}&\bm I_m
-\end{vmatrix}
-&=\begin{vmatrix}
-\bm I_n&\bm 0_{n\x m}\\
-\bm A&\bm I_m-\bm{AB}
-\end{vmatrix}\\
-\begin{vmatrix}
-\bm I_n&-\bm B\\
-\bm 0_{m\x n}&\bm I_m
-\end{vmatrix}
-\begin{vmatrix}
-\bm I_n&\bm B\\
-\bm A&\bm I_m
-\end{vmatrix}
-&=\begin{vmatrix}
-\bm I_n-\bm{BA}&\bm 0_{n\x m}\\
-\bm A&\bm I_m
-\end{vmatrix}
-\end{align}
-Since we have $\begin{vmatrix}
-\bm I_n&\bm B\\
-\bm A&\bm I_m
-\end{vmatrix}\begin{vmatrix}
-\bm I_n&-\bm B\\
-\bm 0_{m\x n}&\bm I_m
-\end{vmatrix}=\begin{vmatrix}
-\bm I_n&-\bm B\\
-\bm 0_{m\x n}&\bm I_m
-\end{vmatrix}
-\begin{vmatrix}
-\bm I_n&\bm B\\
-\bm A&\bm I_m
-\end{vmatrix},$ we derive
-\[
-\begin{vmatrix}
-\bm I_n&\bm 0_{n\x m}\\
-\bm A&\bm I_m-\bm{AB}
-\end{vmatrix}=\begin{vmatrix}
-\bm I_n-\bm{BA}&\bm 0_{n\x m}\\
-\bm A&\bm I_m
-\end{vmatrix}
-\implies
-\det(\bm I_n)\det(\bm I_m-\bm{AB})=\det(\bm I_m)\det(\bm I_n-\bm{BA})
-\]
-Equivalently, $\det(\bm I_m-\bm{AB})=\det(\bm I_n-\bm{BA}).$
-\item
-Secondly we prove that the nonzero eigenvalues of $\bm A\trans\bm A$ and $\bm A\bm A\trans$ are exactly the same (counted with multiplicity):\\
-We only need to show $\frac{\det(\lambda\bm I-\bm A\trans\bm A)}{\lambda^{n-r}}=\frac{\det(\lambda\bm I-\bm A\trans\bm A)}{\lambda^{m-r}}.$\\
-And we find that 
-\begin{align*}
-\det(\lambda\bm I-\bm A\trans\bm A)&
-=\lambda^n\det(\bm I-\lambda^{-1}\bm A\trans\bm A)\\
-&=\lambda^n\det(\bm I-\lambda^{-1}\bm A\bm A\trans)\qquad&\text{Due to Sylvester's determinant identity}\\
-&&\text{$\det(\bm I_m-\bm{AB})=\det(\bm I_n-\bm{BA}).$}\\
-&&\text{for $\bm A\in\mathbb{R}^{m\x n}$ and $\bm B\in\mathbb{R}^{n\x m}$.}
-\end{align*}
-Hence we obtain
-\begin{align*}
-\frac{\det(\lambda\bm I-\bm A\trans\bm A)}{\lambda^{n-r}}&=\frac{\lambda^n\det(\bm I-\lambda^{-1}\bm A\bm A\trans)}{\lambda^{n-r}}\\
-&=\frac{\lambda^m\det(\bm I-\lambda^{-1}\bm A\bm A\trans)}{\lambda^{m-r}}\\
-&=\frac{\det(\lambda\bm I-\bm A\bm A\trans)}{\lambda^{m-r}}
-\end{align*}
-\item
-Then we show the eigenvalues for $\bm A\trans\bm A$ have exactly $(n-r)$ zeros; the eigenvalues for $\bm A\bm A\trans$ have exactly $(m-r)$ zeros.\\
-Assume there are $n$ ind. eigenvectors $\{\bm v_1,\dots,\bm v_n\}$ for $\bm A\trans\bm A$ corresponding to their eigenvalues $\{\lambda_1,\lambda_2,\dots,\lambda_n\}$. Hence we have
-\[
-\bm A\trans\bm A\bm v_i=\lambda_i\bm v_i\text{ for }i=1,\dots,n.
-\]
-Since $\rank(\bm A)=r=\rank(\bm A\trans\bm A)$, the dimension of the eigenspace for $\lambda=0$ is $n-r$.\\
-Hence among $\{\bm v_1,\dots,\bm v_n\}$ there are $n-r$ ind. eigenvectors belong to the eigenspace for $\lambda=0$.\\
-Thus there are exactly $(n-r)$ zeros for eigenvalues of $\bm A\trans\bm A$.
-\item
-How to prove there are exactly $(m-r)$ zeros for eigenvalues of $\bm A\bm A\trans$? We just need to obtain $\rank(\bm A\trans)=r=\rank(\bm A\bm A\trans)$ and proceed similarly.
-\end{itemize}
-\end{proof}
-\newpage
-\begin{remark}
-Maybe you think the second part proof ($\bm A\trans\bm A$ and $\bm A\bm A\trans$ have the same set of nonzero eigenvalues) is too thicky. Here is a proofoutline of another way to show this conclusion:
-\begin{proof}[Proofoutline.]\qquad\\
-Assume $\bm v_1,\dots,\bm v_n$'s are eigenvectors of $\bm A\trans\bm A$, then define $\bm u_j$ as in the proof of SVD theorem for nonzero $\lambda_j$'s, where $j=1,\dots,r.$ \\
-Then by the equation $\bm A\bm A\trans\bm u_j = \lambda_j\bm u_j$, $\lambda_j$ is also the eigenvalue of $\bm A\bm A\trans$ with eigenvector $\bm u_j$. 
+Firstly, consider the matrix product $\bm A\bm A\trans$. Since $\bm A\bm A\trans\in\mathbb{S}^m$ and $\bm A\succeq0$, we can decompose $\bm A\bm A\trans$ as
+\begin{equation}\label{Eq:8:9}
+\bm A\bm A\trans=\bm U\bm\Sigma\bm U\trans
+=\begin{bmatrix}
+\bm U_1&\bm U_2
+\end{bmatrix}
+\begin{bmatrix}
+\tilde{\bm\Sigma}&\bm0\\\bm0&\bm0
+\end{bmatrix}
+\begin{bmatrix}
+\bm U_1\trans&\bm U_2\trans
+\end{bmatrix}=\bm U_1\tilde{\bm\Sigma}\bm U_1\trans
+\end{equation}
+where:
 \begin{itemize}
 \item
-If $\lambda_j$ is eigenvalue of $\bm A\trans\bm A$ with mulplicity $d$, then by the eigendecomposition there are exactly $d$ ind. eigenvectors $v_{j_1},\dots, v_{j_d}$ associated with $\lambda_j$; thus we get d ind. eigenvectors $\bm u_{j_1},\dots, \bm u_{j_d}$ associated with $\lambda_j$ for $\bm A\bm A\trans$. Thus the multiplicity of $\lambda_j$ for $\bm A\trans \bm A$ and $\bm A\bm A\trans$ are the same.
-\item
-Thus $\{\lambda_1, \dots, \lambda_r\}$ (counted with multiplicity) is a subset of $\eig(\bm A\bm A\trans)$.
-\item
-Similarly, the set of nonzero eigenvalues of $\bm A\bm A\trans$ is also a subset of $\eig(\bm A\trans\bm A)$. Thus these two matrices have the same set of nonzero eigenvalues.
-\end{itemize}
-   Since all the rest eigenvalues must be zero, we get the desired result. 
-\end{proof}
-\end{remark}
-
-For SVD decomposition
+we assume that the eigenvalues are ordered, i.e., 
 \[
-\bm A=\bm U\bm\Sigma\bm V\trans
+\begin{array}{lll}
+\lambda_1\ge\dots\ge\lambda_r>0,
+&
+\mbox{and}
+&
+\lambda_{r+1}=\cdots=\lambda_p=0
+\end{array}
+\]
+with $r$ being the number of nonzero eigenvalues
+\item
+$\bm U\in\mathbb{R}^{m\times m}$ denotes an orthogonal matrix, and its columns are the corresponding eigenvectors
+\item
+We partition $\bm U$ as
+\[
+\begin{array}{ll}
+\bm U=\begin{bmatrix}
+\bm U_1&\bm U_2
+\end{bmatrix},
+&
+\bm U_1\in\mathbb{R}^{m\times r},\bm U_2\in\mathbb{R}^{m\times (m-r)},
+\end{array}
+\]
+and $\tilde{\bm\Sigma}=\diag(\lambda_1,\dots,\lambda_r)$.
+\end{itemize}
+\item
+Secondly, we show that 
+\begin{equation}\label{Eq:8:12}
+\bm U_2\trans\bm A=0
+\end{equation}
+
+Since $\bm U$ is orthogonal, we obtain:
+\[
+\bm U\trans\bm U=\begin{bmatrix}
+\bm U_1\trans\\\bm U_2\trans
+\end{bmatrix}\begin{bmatrix}
+\bm U_1&\bm U_2
+\end{bmatrix}=\begin{bmatrix}
+\bm U_1\trans\bm U_1&\bm U_1\trans\bm U_2\\
+\bm U_2\trans\bm U_1&\bm U_2\trans\bm U_2
+\end{bmatrix}=\bm I\implies
+\bm U_2\trans\bm U_1=\bm0.
+\]
+Substituting Eq.(\ref{Eq:8:9}) into $\bm U_2\trans\bm A(\bm U_2\trans\bm A)\trans$, we obtain:
+\begin{equation}
+\bm U_2\trans\bm A(\bm U_2\trans\bm A)\trans
+=(\bm U_2\trans\bm U_1)\tilde{\bm\Sigma}\bm U_1\trans\bm U_2=\bm0\label{Eq:8:10}
+\end{equation}
+By Eq.(\ref{Eq:8:10}) and the simple result that $\bm B\bm B\trans=\bm0$ implies $\bm B=\bm0$ (write $\bm B$ into column vectors form to verify it), we conclude that $\bm U_2\bm A=\bm0$
+\item
+Thirdly, we construct the following matrices:
+\[
+\begin{array}{ll}
+\widehat{\bm\Sigma}=\tilde{\Sigma}^{1/2}=\diag(\sqrt{\lambda_1},\dots,\sqrt{\lambda_r}),
+&
+\bm V_1=\bm A\trans\bm U_1\widehat{\bm\Sigma}^{-1}\in\mathbb{R}^{n\times r}.
+\end{array}
+\]
+Combining it with Eq.(\ref{Eq:8:9}), we can verify that $\bm V_1\trans\bm V_1=\bm I$. Furthermore, there exists a matrix $\bm V_2\in\mathbb{R}^{n\times (n-r)}$ such that $\bm V=\begin{bmatrix}
+\bm V_1&\bm V_2
+\end{bmatrix}$ is orthogonal. Moreover, we can verify that
+\begin{equation}\label{Eq:8:11}
+\begin{array}{ll}
+\bm U_1\trans\bm A\bm V_1=\widehat{\bm\Sigma},
+&
+\bm U_1\trans\bm A\bm V_2=\bm0
+\end{array}
+\end{equation}
+\item
+Fourthly, consider the matrix product $\bm U\trans\bm A\bm V$. From Eq.(\ref{Eq:8:11}) and Eq.(\ref{Eq:8:12}), we have
+\begin{align*}
+\bm U\trans\bm A\bm V&=\begin{bmatrix}
+\bm U_1\trans\bm A\bm V_1&
+\bm U_1\trans\bm A\bm V_2
+\\
+\bm U_2\trans\bm A\bm V_1
+&
+\bm U_2\trans\bm A\bm V_2
+\end{bmatrix}\\&=\begin{bmatrix}
+\widehat{\bm\Sigma}&\bm0\\\bm0&\bm0
+\end{bmatrix}:=\bm\Sigma
+\end{align*}
+By multiplying the above equation on the left by $\bm U$ and on the
+right by $\bm V\trans$, we obtain the desired result $A = \bm U\bm\Sigma\bm V\trans.$ The proof is complete.
+\end{itemize}
+\end{proof}
+
+\subsection{Remark on SVD decomposition}
+\subsubsection{Remark 1: Different Ways of Writing out SVD}
+\begin{definition}[Paritioned form of SVD]
+let $r$ be the number of nonzero singular values, and note that $\sigma_1\ge\cdots\ge\sigma_r>0, \sigma_{r+1}=\cdots=\sigma_p=0$. Then from the standard form, we derive the \emph{partitioned form of SVD}:
+\begin{equation}\label{Eq:8:13}
+\bm A=\begin{bmatrix}
+\bm U_1&\bm U_2
+\end{bmatrix}\begin{bmatrix}
+\tilde{\bm\Sigma}&\bm0\\\bm0&\bm0
+\end{bmatrix}\begin{bmatrix}
+\bm V_1\trans\\\bm V_2\trans
+\end{bmatrix}
+\end{equation}
+where:
+\begin{itemize}
+\item
+$\tilde{\bm\Sigma} = \diag(\sigma_1,\dots,\sigma_r)$
+\item
+$\bm U_1=\begin{bmatrix}
+\bm u_1&\cdots&\bm u_r
+\end{bmatrix}\in\mathbb{R}^{m\times r}, \bm U_2=\begin{bmatrix}
+\bm u_{r+1}&\cdots&\bm u_m
+\end{bmatrix}\in\mathbb{R}^{m\times (m-r)}$
+\item
+$\bm V_1=\begin{bmatrix}
+\bm v_1&\cdots&\bm v_r
+\end{bmatrix}\in\mathbb{R}^{n\times r}, \bm V_2=\begin{bmatrix}
+\bm v_{r+1}&\cdots&\bm v_n
+\end{bmatrix}\in\mathbb{R}^{n\times (n-r)}$
+\end{itemize}
+Note that $\bm U_1,\bm U_2,\bm V_1,\bm V_2$ are semi-orthogonal, i.e., they all have orthonormal columns.
+\end{definition}
+\begin{definition}[Thin SVD]
+We can re-write Eq.(\ref{Eq:8:13}) as the \emph{thin form of SVD}:
+\begin{equation}\label{Eq:8:14}
+\bm A=\bm U_1\tilde{\bm\Sigma}\bm V_1\trans
+\end{equation}
+\end{definition}
+\begin{definition}[Outer-product form]
+By expanding the Eq.(\ref{Eq:8:14}), we derive the \emph{outer-product form of SVD}:
+\begin{equation}\label{Eq:8:15}
+\bm A=\sum_{i=1}^p\sigma_i\bm u_i\bm v_i\trans
+=\sum_{i=1}^r\sigma_i\bm u_i\bm v_i\trans
+\end{equation}
+\end{definition}
+
+\subsubsection{Remark 2: SVD and Eigen-decomposition}
+The eigenvalues for $\bm A\trans\bm A$ and $\bm A\bm A\trans$ are the same for first $p$ terms.
+\begin{proposition}
+Suppose $\bm A$ admits the SVD $\bm A=\bm U\bm\Sigma\bm V\trans$, then we have:
+\begin{align}
+\bm A\bm A\trans&=\bm U\bm D_1\bm U\trans,\qquad
+\bm D_1=\bm\Sigma\bm\Sigma\trans=\diag(\sigma_1^2,\dots,\sigma_p^2,\underbrace{0,\dots,0}_{\text{$m-p$ zeros}})\\
+\bm A\trans\bm A&=\bm V\bm D_2\bm V\trans,\qquad
+\bm D_2=\bm\Sigma\trans\bm\Sigma=\diag(\sigma_1^2,\dots,\sigma_p^2,\underbrace{0,\dots,0}_{\text{$n-p$ zeros}})
+\end{align}
+\end{proposition}
+\begin{proof}
+Just apply the SVD form and the orthogonality of $\bm U$ and $\bm V$.
+\end{proof}
+
+\subsubsection{Remark 3: SVD and Subspace}
+We are curious about how many singular values of $\bm A$ are nonzero.
+\begin{proposition}\label{Prop:8:5}
+The following properties hold:
+\begin{enumerate}
+\item
+$\mathcal{C}(\bm A)=\mathcal{C}(\bm U_1), \mathcal{C}(\bm A)^\perp=\mathcal{C}(\bm U_2)$;
+\item
+$\mathcal{C}(\bm A\trans)=\mathcal{C}(\bm V_1), \mathcal{C}(\bm A\trans)^\perp=\mathcal{N}(\bm A)=\mathcal{C}(\bm V_2)$;
+\item
+$\rank(\bm A)=r$, i.e., the number of nonzero singular values.
+\end{enumerate}
+\end{proposition}
+\begin{proof}
+The above properties are easily seen to be true using SVD. Also, you should apply the definition for column space and null space. You should verify these properties by yourself. 
+\begin{subequations}
+\begin{equation}
+\mathcal{C}(\bm A)=\{\bm y\in\mathbb{R}^m\mid\bm y=\bm{Ax}, \bm x\in\mathbb{R}^n\}
+\end{equation}
+\begin{equation}
+\mathcal{N}(\bm A)=\{\bm x\in\mathbb{R}^n\mid \bm{Ax}=\bm0\}
+\end{equation}
+\end{subequations}
+For the third part of proposition(\ref{Prop:8:5}), since $\rank(\bm A)=\dim(\mathcal{C}(\bm A))=\dim(\mathcal{C}(\bm U_1))$, and $\bm U_1$ has $r$ orthonormal columns, we derive that $\dim(\mathcal{C}(\bm U_1))=r=\rank(\bm A).$
+\end{proof}
+
+For the SVD decomposition
+\[
+\bm A=\bm U\bm\Sigma\bm V\trans,
 \]
 we can convert it into the following two forms:
 \begin{gather*}
@@ -298,72 +303,54 @@ we can convert it into the following two forms:
 \bm A\trans\bm U=\bm V\bm\Sigma\bm U\trans\bm U=\bm V\bm\Sigma.
 \end{gather*}
 If we write it into vector forms, we obtain:
-\[
+\begin{equation}
 \left\{
 \begin{aligned}
 \bm A\bm v_j=\sigma_j\bm u_j\\
 \bm A\trans\bm u_j=\sigma_j\bm v_j
 \end{aligned}
-\right.
-\]
-And the columns of $\bm U$ ($\bm u_j$) are called \emph{left singular vector} of $\bm A$; the columns of $\bm V$ ($\bm v_j$) are called \emph{right singular vector} of $\bm A$; $\sigma_j$ is called the \emph{singular value}.
-\subsubsection{Remark 2: Four fundamental subspaces}
-The general SVD decomposition for $\bm A\in\mathbb{R}^{m\x n}$ is given by
-\[
-\bm A=\begin{bmatrix}
-\bm u_1&\dots&\bm u_r&\dots&\bm u_m
-\end{bmatrix}\begin{pmatrix}
-\sigma_1&&&&&\\
-&\ddots&&&&\\
-&&\sigma_r&&&\\
-&&&0&&\\
-&&&&\ddots&\\
-&&&&&0\\
-0&\dots&\dots&\dots&\dots&0\\
-0&\dots&\dots&\dots&\dots&0\\
-\end{pmatrix}
-\begin{pmatrix}
-\bm v_1\trans\\\vdots\\\bm v_r\trans\\\vdots\\\bm v_n\trans
-\end{pmatrix}=\bm U\bm\Sigma\bm V\trans
-\]
-For such $\bm A$, the matrix $\bm U$ and $\bm V$ contain orthonormal basis for all four fundamental subspaces:
-\begin{align*}
-&\text{First }r\text{ columns of $\bm V$: }\text{row space of $\bm A$.}\\
-&\text{last }n-r\text{ columns of $\bm V$: }\text{null space of $\bm A$.}\\
-&\text{First }r\text{ columns of $\bm U$: }\text{column space of $\bm A$.}\\
-&\text{last }m-r\text{ columns of $\bm U$: }\text{null space of $\bm A\trans$.}\\
-\end{align*}
-Maybe it's easy to understand it in graph:
+\right.,\quad j=1,2,\dots,r.\label{Eq:8:19}
+\end{equation}
+The columns of $\bm U$ ($\bm u_j$) are called the \emph{left singular vector} of $\bm A$; the columns of $\bm V$ ($\bm v_j$) are called the \emph{right singular vector} of $\bm A$; $\sigma_j$ is called the \emph{singular value}.
+
+We can easily understand the proposition(\ref{Prop:8:5}) and Eq.(\ref{Eq:8:19}) by the following graph:
 \begin{figure}[H]
 \centering
 \includegraphics[width=10cm]{week7/fundamental}
 \caption{The fundamental spaces and the action of $\bm A$.}
 \end{figure}
-\subsubsection{Remark 3: vector form}
-Recall we can write eigendecomposition in \textit{vector form:}
+\textbf{Explanation:}
+\begin{itemize}
+\item
+When $\{\bm v_1,\dots,\bm v_r\}$ are multiplied by $\bm A$, they are converted into $\{\sigma_1\bm u_1,\dots,\sigma_r\bm u_r\}$; when $\{\bm v_{r+1},\dots,\bm v_{n}\}$ are multiplied by $\bm A$, they are converted into $\bm0$.
+\item
+The first $r$ columns of $\bm V$ forms the basis for the row space of $\bm A$, i.e., $\mathcal{C}(\bm V_1)=\mathcal{C}(\bm A\trans)$.
+\item
+The last $n-r$ columns of $\bm V$ forms the basis for the null space of $\bm A$, i.e., $\mathcal{C}(\bm V_2)=\mathcal{N}(\bm A)$.
+\item
+The first $r$ columns of $\bm U$ forms the basis for the column space of $\bm A$, i.e., $\mathcal{C}(\bm U_1)=\mathcal{C}(\bm A)$.
+\item
+The last $m-r$ columns of $\bm U$ forms the basis for the null space of $\bm A\trans$, i.e., $\mathcal{C}(\bm U_2)=\mathcal{N}(\bm A\trans)$
+\end{itemize}
+
+Recall the outer-product form of SVD, 
 \[
-\bm A=\lambda_1\bm v_1\bm v_1\trans+\dots+\lambda_n\bm v_n\bm v_n\trans
+\bm A=\sigma_1\bm u_1\bm v_1\trans+\dots+\sigma_r\bm u_r\bm v_r\trans
 \]
-Also, we could write the \emph{general} SVD decomposition in remark 2 into \textit{vector form}:
-\[
-\bm A=\sigma\bm u_1\bm v_1\trans+\dots+\sigma\bm u_r\bm v_r\trans
-\]
-where $r=\rank(\bm A)=\text{number of nonzero singular values.}$ Here leads to the third meaning for the rank:
-\begin{proposition}
-The rank of $m\x n$ matrix $\bm A$ is the number of nonzero singular values.
-\end{proposition}
-\begin{proof}
-Without loss of generality, we set $m\ge n$. And we assume there are exactly $s$ zero singular values of $\bm A$, which means there are $s$ zero eigenvalues of $\bm A\trans\bm A$ assocaiated with their $s$ ind. eigenvectors. (Independence is due to the diagonalizable of $\bm A\trans\bm A$.) In other words, the eigenspace of $\bm A\trans\bm A$ for $\lambda=0$ has dimension $s$.\\
-The eigenspace of $\bm A\trans\bm A$ for $\lambda=0$ is given by
-\[
-\{\bm x:\bm A\trans\bm A\bm x=\bm 0\}.
-\]
-Hence its dimension is given by
-\[
-\rank(\bm A\trans\bm A)=\rank(\bm A):=n-r.
-\]
-Hence $s=n-r$. And obviously, the number of \emph{nonzero} singular values is $n-s=r$.
-\end{proof}
+where $r=\rank(\bm A)=\text{number of nonzero singular values,}$ which is the third meaning for the rank:
+\begin{remark}
+Up till now, $\rank(\bm A)$ has three meanings:
+\begin{itemize}
+\item
+$\rank(\bm A)=\dim(\row(\bm A))$
+\item
+$\rank(\bm A)=\dim(\col(\bm A))$
+\item
+$\rank(\bm A)=$ number of nonzero singular values of $\bm A$.
+\end{itemize}
+\end{remark}
+
+
 \begin{remark}
 However, $\rank(\bm A)\ne$ number of nonzero eigenvalues. Let me raise a counterexample:
 \[
@@ -373,8 +360,15 @@ However, $\rank(\bm A)\ne$ number of nonzero eigenvalues. Let me raise a counter
 \]
 then eigenvalues are $\lambda_1=\lambda_2=0$, and $\rank(\bm A)=1.$
 \end{remark}
+\begin{remark}
+Also, note that many properties can be easily proved by \emph{thin} or \emph{outer-product} form of	SVD. For example, $\rank(\bm A\trans\bm A)=\rank(\bm A)$. If you have no ideas of a proof in exam, you may try SVD.
+\end{remark}
+
+
+
+
 \subsubsection{Compact SVD}
-Hence any matrix with rank $r$ can be factorized into
+Due to the outer-product form of SVD, i.e., any matrix with rank $r$ can be factorized into
 \begin{align*}
 \bm A&=\bm U\bm\Sigma\bm V\trans\\
 &=\begin{bmatrix}
@@ -383,9 +377,9 @@ Hence any matrix with rank $r$ can be factorized into
 \sigma_1&&\\&\ddots&\\&&\sigma_r
 \end{pmatrix}\begin{bmatrix}
 \bm v_1\trans\\\vdots\\\bm v_r\trans
-\end{bmatrix}
+\end{bmatrix},
 \end{align*}
-where $\bm U\in\mathbb{R}^{m\x r}$ and $\bm V\in\mathbb{R}^{r\x n}$ are both orthogonal matrix. And $\bm\Sigma=\diag(\sigma_1,\dots,\sigma_r)$, where $\sigma_i>0$ for $i=1,2,\dots,r$.
+we obtain the following corollary:
 \begin{corollary}
 Every rank $r$ matrix can be written as the sum of $r$ rank $1$ matrices. Moreover, these matrices could be perpendicular!
 \end{corollary}
@@ -403,30 +397,21 @@ Decompose $\bm A:=\sum_{i=1}^{r}\sigma_i\bm u_i\bm v_i\trans$. If we set $\bm A_
 &=\sigma_i\sigma_j\trace(\bm v_j(\bm u_j\trans\bm u_i)\bm v_i\trans)=\sigma_i\sigma_j\trace(\bm v_j\bm 0\bm v_i\trans)\\
 &=0.
 \end{align*}
-So what is rank? How many rank 1 matrices do we need to pick to construct matrix $\bm A$? In fact, this number has no upper bound. For example, if we obtain
+
+How many rank 1 matrices do we need to pick to construct matrix $\bm A$? In fact, this number has no upper bound. For example, if we obtain
 \[
 \bm A=\bm u_1\bm v_1\trans+\bm u_2\bm v_2\trans
 \]
-Then we can always decompose any rank 1 matrix into 2 rank 1 matrix:
+Then we can always decompose any rank 1 matrix into 2 rank 1 matrices:
 \[
 \bm A=\bm u_1\bm v_1\trans+\frac{1}{2}\bm u_2\bm v_2\trans+\frac{1}{2}\bm u_2\bm v_2\trans.
 \]
-But this number has a lower bound, that is rank. In other words, $\rank(\bm A)$=smallest number of rank 1 matrices with sum $\bm A$.
-\begin{remark}
-Up till now, $\rank(\bm A)$ has three meanings:
-\begin{itemize}
-\item
-$\rank(\bm A)=\dim(\row(\bm A))$
-\item
-$\rank(\bm A)=\dim(\col(\bm A))$
-\item
-$\rank(\bm A)=$ smallest number of rank 1 matrices with sum $\bm A$.
-\end{itemize}
-\end{remark}
+But this number has a lower bound, that is rank. In other words, $\rank(\bm A)$ = smallest number of rank 1 matrices with sum $\bm A$.
+
 \subsection{Best Low-Rank Approximation}
-Given matrix $\bm A$. What is the \textit{best rank $k$ approximation}? In other words, given matrix $\bm A\in\mathbb{R}^{m\x n}$, what is the optimal solution for the model:
+Given matrix $\bm A$. What is the \textit{best rank $k$ approximation}? In other words, given matrix $\bm A\in\mathbb{R}^{m\x n}$, what is the optimal solution for the optimization:
 \begin{align*}
-  \min\quad        & \|\bm A-\bm Z\|^2_{F} \\
+  \min_{\bm Z}\quad        & \|\bm A-\bm Z\|^2_{F} \\
   \text{s.t.\quad} &  \rank(\bm Z)=k &     \\
                    &\bm Z\in\mathbb{R}^{m\x n}
 \end{align*}
@@ -438,25 +423,57 @@ The Frobenius norm for $m\x n$ matrix $\bm A$ is given by
 \]
 \end{definition}
 \begin{theorem}\label{proposition_8.4}
-Suppose the SVD if $\bm A\in\mathbb{R}^{m\x n}$ is given by
+Suppose the SVD for $\bm A\in\mathbb{R}^{m\x n}$ is given by
 \[
 \bm A=\sigma_1\bm u_1\bm v_1\trans+\dots+\sigma_r\bm u_r\bm v_r\trans.
 \]
-where $\bm u_i$'s and $\bm v_i$'s are $\mathbb{R}^{n}$ vectors. And we suppose $\sigma_1\ge\sigma_2\ge\dots\ge0$.\\
+with $\sigma_1\ge\sigma_2\ge\dots\ge0$.
+
 Then the best rank $k$($k\le r$) approximation of $\bm A$ is
 \[
 \bm A_k=\sigma_1\bm u_1\bm v_1\trans+\dots+\sigma_k\bm u_k\bm v_k\trans.
 \]
 \end{theorem}
-For example, $\sigma_1\bm u_1\bm v_1\trans$ is the best rank 1 approximation.
+For example, $\sigma_1\bm u_1\bm v_1\trans$ is the best rank 1 approximation of $\bm A$.
 \subsubsection{Analogy with least square problem}
-For least square problem, the key is to do approximation for $\bm b\in\mathbb{R}^m$. In other words, we just do a projection from $\bm b$ to the plane $\{\bm{Ax}|\bm x\in\mathbb{R}^n\}$:
+For least squares problem, the key is to do approximation for $\bm b\in\mathbb{R}^m$. In other words, we just do a projection from $\bm b$ to the plane $\{\bm{Ax}|\bm x\in\mathbb{R}^n\}$:
 \begin{figure}[H]
 \centering\includegraphics{week7/least_square}
-\caption{Least square problem: find $\bm x$ such that $\bm{Ax}=\Proj_{\bm A}(\bm b).$}
+\caption{Least square problem: find $\bm x$ such that $\bm{Ax}=\Proj_{\mathcal{C}(\bm A)}(\bm b).$}
 \end{figure}
-Similarly, the beast rank k approximation could be viewed as a projction from $\bm A$ with rank $r$ to the ``plane'' that contains all rank $k$ matrices:
+\begin{remark}
+For the least squares problem
+\begin{align*}
+  \min_{\bm x}\quad        & \|\bm A\bm x-\bm b\|^2 \\
+  \text{s.t.\quad} &  \bm x\in\mathbb{R}^{n}
+\end{align*}
+with $\bm A\in\mathbb{R}^{m\times n}$ and $\bm b\in\mathbb{R}^m$, the key is to do the projection of $\bm b$ onto $\mathcal{C}(\bm A)$, thus it suffices to solve the \emph{equality}
+\[
+\bm{Ax}=\Proj_{\mathcal{C}(\bm A)}(\bm b).
+\]
+\end{remark}
+
+
+
+
+Similarly, the beast rank $k$ approximation could be viewed as a projction from $\bm A$ with rank $r$ to the ``plane'' that contains all rank $k$ matrices:
 \begin{figure}[H]
 \centering\includegraphics{week7/rank_r}
-\caption{Best rank $k$ approximation: find projection from rank $r$ matrix to the plane that contains all rank $k$ matrices}
+\caption{Best rank $k$ approximation: find the projection from matrix $\bm A$ with rank $r$ onto the plane that contains all rank $k$ matrices}
 \end{figure}
+\begin{remark}
+Similarly, for the best rank $k$ approximation problem
+\begin{align*}
+  \min_{\bm Z}\quad        & \|\bm A-\bm Z\|^2_{F} \\
+  \text{s.t.\quad} &  \rank(\bm Z)=k &     \\
+                   &\bm Z\in\mathbb{R}^{m\x n}
+\end{align*}
+with $\bm A\in\mathbb{R}^{m\times n}$, the key is to do the projection of $\bm A$ onto the set $\mathcal{M}=\{\bm M \in\mathbb{R}^{m\times n}\mid \rank(\bm M)=k\}$, thus it suffices to solve the \emph{equality}
+\[
+\bm{Z}=\Proj_{\mathcal{M}}(\bm A).
+\]
+For some non-convex optimization problems, this idea is very useful. The further reading is recommended:
+\begin{quotation}
+Jain, Prateek, and P. Kar. "Non-convex Optimization for Machine Learning." Foundations $\&$ Trends® in Machine Learning 10.3-4(2017):142-336.
+\end{quotation}
+\end{remark}
