Update final version

--- a/book_cover/BookParameters.tex
+++ b/book_cover/BookParameters.tex
@@ -30,15 +30,15 @@
 \def\TheSubTitleB{Why Not Read This One?}
 \def\TheBookSeries{}
 
-\def\TheAuthor{Prof. Tom Luo}
+\def\TheAuthor{Prof. Tom Luo \\  Prof. Ruoyu Sun}
 \def\TheAuthorA{Wilson J.}
 \def\TheAuthorB{Schmeggles}
 \def\TheAuthorLNF{Schmeggles, Wilson, J.}
 
 \def\TheCopyrightYear{2017}
-\def\TheEdition{First Edition}
+\def\TheEdition{Second Edition}
 
-\def\ThePublisherName{The First Edition}% Just the short form name
+\def\ThePublisherName{The Second Edition}% Just the short form name
 \def\ThePublisherLineA{MathPi}% Just one part of the name
 \def\ThePublisherLineB{Club}% Just one part of the name
 \def\ThePublisher{\ThePublisherName}% Add Ltd, Inc, LLC etc here
