--- a/preface.tex
+++ b/preface.tex
@@ -1,4 +1,4 @@
-This book is intended for the foundation course MAT2040, which is the first course on the linera algebra. It aims to cover basic linear algebra knowledge and its simple applications. This book was first written in 2017, and it is reviewed and revised in 2018. We have correct several mistakes shown in the previous book and modify some proofs a little bit to give readers better insights of linear algebra.  During the modification, we also refer to many reading materials, which are also recommended for you:
+This book is intended for the foundation course MAT2040, which is the first course on the linear algebra. It aims to cover basic linear algebra knowledge and its simple applications. This book was first written in 2017, and it is reviewed and revised in 2018. We have corrected several mistakes shown in the previous book and modified some proofs a little bit to give readers better insights of linear algebra.  During the modification, we also refer to many reading materials, which are also recommended for you:
 \begin{itemize}
 \item
 ENGG 5781 Course Notes by Prof. Wing-Kin (Ken) Ma,  CUHK, Hongkong, China,  http://www.ee.cuhk.edu.hk/$\sim$wkma/engg5781
