--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 %% Run LaTeX on this file several times to get Table of Contents,
 \input{book_command}
 \usepackage{pdfpages}
-\includeonly{week7/Thursday}
+%\includeonly{week7/Thursday}
 \begin{document}
 %Hello
 \frontmatter
